--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,16 @@ h1 {
 #registerSubmit {
     background-color: grey;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: inherit;
+}
+
+.card:hover {
+    background-color: whitesmoke;
+}
