--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                                                 <%= note.title %>
                                             </h5>
                                             <p class="card-text">
-                                                <%= note.content %>
+                                                <%= note.preview %>
                                             </p>
                                         </a>
                                         <input type="hidden" id="userHome" value = "<%= `${username}` %>">
