--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -42,7 +42,7 @@
                     <br></br>
                     <label class="form-label" for="content"><b>Content</b></label>
                     <br></br>
-                    <textarea class="form-control" type="content" placeholder="Enter Content" name="newNoteContent" rows="5" required></textarea>
+                    <textarea class="form-control" type="text" placeholder="Enter Content" name="newNoteContent" id="newNoteContent" rows="5" required></textarea>
                     <br></br>
                     <input type="submit" id="newNoteSubmit" class="btn btn-primary" value="Create">
                 </form>
