--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                                     <div class="card h-100" id="<%= note.id %>">
                                         <a class="card-body" href="/note/<%= note.id %>">
                                             <h5 class="card-title text-center">
-                                                <%= note.title %>
+                                                <%= note.titlePreview %>
                                             </h5>
                                             <p class="card-text">
                                                 <%= note.preview %>
