--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,10 +28,10 @@
                                     <div class="card h-100" id="<%= note.id %>">
                                         <a class="card-body" href="/note/<%= note.id %>">
                                             <h5 class="card-title text-center">
-                                                <%= note.titlePreview %>
+                                                <%= note.title.substring(0, 50) %>
                                             </h5>
                                             <p class="card-text">
-                                                <%= note.preview %>
+                                                <%= note.content.substring(0, 100) %>
                                             </p>
                                         </a>
                                         <button class="btn btn-danger float-end" value="<%= note.id %>"
